gccida/g1/emit_libcall_block
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3335:4: error: expected ';' after expression
rtx v12; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3335:5: error: use of undeclared identifier 'v12'; did you mean 'v11'?
rtx v12; // r12 
    ^~~
    v11
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3334:18: note: 'v11' declared here
 struct rtx_def *v11; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3337:4: error: expected ';' after expression
rtx i; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3337:5: error: use of undeclared identifier 'i'
rtx i; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3343:4: error: expected ';' after expression
rtx v20; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3343:5: error: use of undeclared identifier 'v20'
rtx v20; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3345:4: error: expected ';' after expression
rtx v22; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3345:5: error: use of undeclared identifier 'v22'; did you mean 'v21'?
rtx v22; // rbx 
    ^~~
    v21
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3344:18: note: 'v21' declared here
 struct rtx_def *v21; // rax 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3347:4: error: expected ';' after expression
rtx targeta; // [rsp+8h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3347:5: error: use of undeclared identifier 'targeta'; did you mean 'target'?
rtx targeta; // [rsp+8h] [rbp-50h] 
    ^~~~~~~
    target
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3325:42: note: 'target' declared here
void  emit_libcall_block( rtx insns, rtx target, rtx result, rtx equiv) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3350:1: error: use of undeclared identifier 'targeta'; did you mean 'target'?
targeta = target; 
^~~~~~~
target
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3325:42: note: 'target' declared here
void  emit_libcall_block( rtx insns, rtx target, rtx result, rtx equiv) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3352:1: error: use of undeclared identifier 'targeta'; did you mean 'target'?
targeta = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)target + 2)); 
^~~~~~~
target
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3325:42: note: 'target' declared here
void  emit_libcall_block( rtx insns, rtx target, rtx result, rtx equiv) 
                                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3352:26: error: use of undeclared identifier 'machine_mode'
targeta = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)target + 2)); 
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3401:7: error: use of undeclared identifier 'i'
for ( i = insns; ; i = ( rtx)v17.rtwint ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3401:20: error: use of undeclared identifier 'i'
for ( i = insns; ; i = ( rtx)v17.rtwint ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3401:30: error: expected ')'
for ( i = insns; ; i = ( rtx)v17.rtwint ) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3401:5: note: to match this '('
for ( i = insns; ; i = ( rtx)v17.rtwint ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3403:1: error: use of undeclared identifier 'v12'
v12 = 0LL; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3404:27: error: use of undeclared identifier 'i'
if ( rtx_class[*( _WORD *)i] == 105 ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/optabs.c:3406:1: error: use of undeclared identifier 'v12'
v12 = ( rtx)i[2]; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_libcall_block/src/obj/optabs.o] Error 1
